RESOLVED FIXED171992
isValidForm for SimpleAddr should use ptr() instead of tmp()
https://bugs.webkit.org/show_bug.cgi?id=171992
Summary isValidForm for SimpleAddr should use ptr() instead of tmp()
Saam Barati
Reported 2017-05-11 14:43:08 PDT
Since that's what ptr() is for.
Attachments
patch (8.15 KB, patch)
2017-05-11 14:50 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2017-05-11 14:50:31 PDT
WebKit Commit Bot
Comment 2 2017-05-11 23:04:10 PDT
Comment on attachment 309789 [details] patch Clearing flags on attachment: 309789 Committed r216733: <http://trac.webkit.org/changeset/216733>
WebKit Commit Bot
Comment 3 2017-05-11 23:04:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.